# aleph-ai-agent-v1

./: .gitignore  README.md  pyproject.toml
src/: agent.py  config.py  exceptions.py  file_handler.py  gemini_service.py  input_handler.py  main.py  ui.py
